--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <iframe src="http:///" scrolling="no" width=490 height="500"></iframe>
+    <iframe src="http://172.22.39.130:8081" scrolling="no" width=490 height="500"></iframe>
+    <iframe src="http://172.22.39.130:8082" scrolling="no" width=490 height="500"></iframe>
 </body>
 
 </html>
