--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <iframe src="http://172.22.39.130:8081" scrolling="no" width=490 height="500"></iframe>
-    <iframe src="http://172.22.39.130:8082" scrolling="no" width=490 height="500"></iframe>
+    <h1 id="title">Aizu Geek Dojo 3Dプリンター リアルタイムカメラ</h1>
+    <div id="camera1"><p class="name">2号機</p><iframe class="camera" src="http://172.22.39.130:8081" scrolling="no" width=250 height=auto></iframe></div>
+    <div id="camera2"><p class="name">3号機</p><iframe class="camera" src="http://172.22.39.130:8082" scrolling="no" width=250 height=auto></iframe></div>
 </body>
 
 </html>
